appium: updated app content and locators